# h8r

./: .envrc  .gitignore  Cargo.nix  Cargo.toml  Dockerfile.build  LICENSE  Makefile  README.md  amd64-bin  amd64-deb  docker-compose.yml  flake.nix  haproxy.cfg
.config/: config.json5  haproxy.sublime-syntax
.github/workflows/: build.yml  cd.yml  release.yml
cfg/: haproxy.cfg
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  layout.rs  layouts.rs  main.rs  mode.rs  settings.rs  stats.rs  tui.rs
src/components/: charts.rs  config.rs  fps.rs  items.rs  logs.rs  menu.rs  status.rs
src/layouts/: graphs.rs  home.rs  info.rs
src/stats/: data.rs  metrics.rs  socket.rs
