[package]
name = "h8r"
version = "2.4.0"
edition = "2021"
description = "k9s but for haproxy"
repository = "https://github.com/shebpamm/h8r"
authors = ["Erik Karsten <erik@opcode.xyz>"]
build = "build.rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "7.0.0"
anyhow = "1.0.79"
async-trait = "0.1.77"
better-panic = "0.3.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.2"
config = "0.14.0"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
csv = "1.3.0"
derive_deref = "1.1.1"
dhat = "0.3.2"
directories = "5.0.1"
futures = "0.3.28"
human-panic = "1.2.0"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
pretty_assertions = "1.4.0"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde-transcode = "1.1.1"
serde_json = "1.0.107"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.25.0", features = ["derive"] }
syntect = "5.2.0"
syntect-tui = "3.0.1"
thiserror = "1.0.56"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
tui-textarea = "0.4.0"

[build-dependencies]
vergen = { version = "8.2.6", features = [ "build", "git", "gitoxide", "cargo" ]}

[profile.release]
debug = 1

[features]
dhat-heap = []    # if you are doing heap profiling
dhat-ad-hoc = []  # if you are doing ad hoc profiling
